Fixed spacing of labels on ProjectTile

--- a/src/project-tile/ProjectTile.css
+++ b/src/project-tile/ProjectTile.css
@@ -28,7 +28,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 3rem;
+  height: 3.5rem;
   background-color: var(--col-2-1);
   color: var(--col-5);
   align-items: center;
@@ -44,6 +44,9 @@
 .ProjectLabel.Show {
   height: 0;
   opacity: 0;
+}
+.ProjectTitle {
+  line-height: 1.75rem;
 }
 .ProjectDescription {
   font-size: 1.25rem;
